Fixed some CSS issues on smaller screen sizes

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -9,11 +9,10 @@ $invisible: rgba(255, 255, 255, 0);
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
-$l-size: 2.8rem;
-$xl-size: 4.5rem;
+$l-size: 2.4rem;
+$xl-size: 4rem;
 $line-width: 0.2rem;
 
 // Screen sizes
 $phone-small: 330px;
 $phone-medium: 500px;
-$monitor-landscape: 1100px;
