--- a/src/styles/components/_forecasttable.scss
+++ b/src/styles/components/_forecasttable.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 30rem;
+  min-height: 25rem;
+  // height: 30rem;
   width: 100%;
 }
